--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,10 +26,10 @@
         </activity>
 
         <activity
-            android:name=".WeatherActivity"
+            android:name=".activity.WeatherActivity"
             android:exported="false"/>
 
-        <service android:name=".TimeService" />
+        <service android:name=".service.TimeService" />
 
     </application>
 
