--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 def API_KEY = '"' + API_KEY + '"' ?: '"Api key not found"'
 def STRING = 'String'
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "fr.lleotraas.myapplication"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -20,6 +22,9 @@ android {
 
         each{type ->
             type.buildConfigField STRING, 'API_KEY', API_KEY
+        }
+        vectorDrawables {
+            useSupportLibrary true
         }
     }
 
@@ -38,18 +43,30 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.2'
     implementation 'androidx.arch.core:core-testing:2.1.0'
+    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation 'androidx.compose.material:material:1.2.1'
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -58,12 +75,33 @@ dependencies {
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01'
 
+    // ViewModel Compose
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+     // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.5.1"
+
+    // Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.41'
+    kapt 'com.google.dagger:hilt-android-compiler:2.41'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:glide:4.13.2'
+    kapt 'com.github.bumptech.glide:glide:4.13.2'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    // Coroutine Lifecycle Scopes
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.0-alpha01'
+
+    // Architectural Components
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
 }
