--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.2.1"
     implementation 'androidx.compose.material:material:1.2.1'
     implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.6.0-alpha02'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
