--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,22 +1,15 @@
 name: Android Build
 
-on: [push]
+on: pull_request
 
 jobs:
-  build:
+  jobs:
+    test_job:
+      name: Assemble
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+         uses: actions/checkout@v2
 
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: 1.8
-
-      - name: Run Tests
-        run: ./gradlew test
-
-      - name: Build Project
-        run: ./gradlew assemble
+        - name: Assemble Debug
+          run: ./gradlew assembleDebug
