--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -3,13 +3,23 @@ name: Android Build
 on: pull_request
 
 jobs:
-  jobs:
-    test_job:
-      name: Assemble
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-         uses: actions/checkout@v2
+  build:
 
-        - name: Assemble Debug
-          run: ./gradlew assembleDebug
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Set Up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Run Tests
+        run: ./gradlew test
+
+      - name: Build Project
+        run: ./gradlew assemble
+
+      - name: Make gradlew executable
+          run: chmod +x ./gradlew
