--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,6 +1,9 @@
 name: Android Build
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -8,11 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      
+
       - name: Set Up JDK
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
+      - name: Build all artifacts
+        id: buildAllApks
+        uses: eskatos/gradle-command-action@v1.3.3
+        with:
+          gradle-version: current
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+          arguments: assembleRelease
+
       - name: Build Project
-        run: ./gradlew assemble
+        run: ./gradlew androidDependencies
